# DocCraftPro

./: .env.example  .gitignore  .init.sh  CLAUDE_SETUP.md  FILE_ANALYSIS.md  Makefile  README.md  RELEASE_NOTES.md  TIMEOUT_GUIDE.md  TROUBLESHOOTING.md  USAGE.md  activate.sh  pyproject.toml  requirements.txt  setup.py  setup.sh
config/: default.yaml
src/ai_dev/: __init__.py  cli.py
src/ai_dev/ai_models/: __init__.py  base.py  claude_cli.py  gemini_cli.py  model_manager.py
src/ai_dev/analyzers/: __init__.py  base.py  pdf.py  ppt.py  spreadsheet.py  text.py
src/ai_dev/config/: __init__.py  manager.py  schemas.py
src/ai_dev/generators/: __init__.py  base.py  qa.py  requirements.py  tasks.py  test_cases.py  test_concept.py
src/ai_dev/utils/: __init__.py  cli_executor.py  encoder.py  formatter.py
test_files/: sample.csv
